# solana-trader

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  soltrade.py
.github/workflows/: docker-build.yml
soltrade/: wallet.py
